fix docs with new endpoint
